tests/k8s_testcases/network-policy-checks-bad-path/matchexpressions_values_wrong_form.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-values-test-form
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        # wrong form
        values:
          Abc-_.
  policyTypes:
    - Ingress
    - Egress
